# Feeder

./: .env  .env.example  .firebaserc  .gitignore  .taurignore  README.md  cage-tauri.service  cage.txt  package-lock.json  package.json  tailwind.config.js  text.txt  tsconfig.json  vite.config.js
arduino-serial-tester/: .gitignore  Cargo.toml  README.md
arduino-serial-tester/src/: main.rs
arduino/feeder_dual_servo_score/: README.md  feeder_dual_servo_score.ino
dist_root_owned_backup_20260227_095122/: index.html
dist_root_owned_backup_20260227_095122/assets/: index-BK3mG-0Y.js  index-BwZA0XnK.css
external-workout-monitor/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
external-workout-monitor/bridge/: server.js
external-workout-monitor/src/: App.jsx  main.jsx  styles.css
motor-control-new/: Cargo.toml
motor-control-new/src/: main.rs
motor-test-old/: .gitignore  Cargo.toml
motor-test-old/src/: main.rs
motor-test/src/: main.rs
src/: App.css  App.jsx  main.jsx  mockTauri.js
src-tauri/: .remote-control.env.example  Cargo.toml  data.db  tauri.conf.json
src-tauri/src/: bluetooth.rs  electro.rs  lib.rs  limit_switch.rs  main.rs  sql.rs  tcp.rs
src/components/: BluetoothControls.jsx  BluetoothControls.tsx  CalibrationMenu.jsx  Chart.jsx  CirclePB.jsx  Clock.jsx  Countdown.jsx  FieldSimulation.jsx  HomeSuccessBox.jsx  ManualScheduler.jsx  ManualSimulation.jsx  Modal.jsx  Modes.jsx  MotorControl.jsx  MotorTest.jsx  MotorTest.tsx  Pause.jsx  Section.jsx  StatisticSection.jsx  SuccessBox.jsx  WorkoutKind.jsx  (+1 more)
(+34 files in other folders)
