[package]
name = "feeder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "feeder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = "2"

sqlx = { version = "0.8.2", features = [ "runtime-async-std-native-tls", "sqlite", "runtime-tokio-rustls"] }
async-std = { version = "1.6", features = [ "attributes" ] }
futures = "0.3.18"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }  # Use the latest version of tokio
once_cell = "1.10"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.11"  # for GPIO control
